# lektricowifi

./: .project  README.md  setup.cfg
src/lektricowifi/: __init__.py  exceptions.py  lektricowifi.py  models.py
tests/: test_mocked_devices.py  test_online_devices.py
