[metadata]
name = lektricowifi
version = 0.0.41
author = Lektrico
author_email = mihaela@civitronic.ro
description = Communication with Lektrico's chargers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://lektri.co
project_urls =
    Bug Tracker = https://lektri.co
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	async_timeout >= 4.0.2
	httpx >= 0.27.0
	pydantic >= 1.10.17

[options.packages.find]
where = src

[options.package_data]
"lektricowifi" = ["py.typed"]